--- a/src/bundle/Resources/views/cron/base.html.twig
+++ b/src/bundle/Resources/views/cron/base.html.twig
@@ -1,27 +1,18 @@
-{% extends 'EzPlatformAdminUiBundle::layout.html.twig' %}
+{% extends '@ibexadesign/ui/edit_base.html.twig' %}
 
 {% trans_default_domain 'section' %}
 
+{% set anchor_params = {
+    close_href: path('edgar.ezuicron.list'),
+} %}
+
+{% block header %}
+    {% block header_admin %}{% endblock %}
+{% endblock %}
+
 {% block content %}
-    <div class="row align-items-stretch ez-main-row">
-        <div class="col-sm-11 px-0 pb-4">
-            <div class="ez-header pt-4">
-                <div class="container">
-                    {% block breadcrumbs_admin %}
-                    {% endblock %}
-
-                    {% block page_title_admin %}
-                    {% endblock %}
-                </div>
-            </div>
-
-            <div class="container px-0 pb-4 mt-5">
-                {% block form %}
-                {% endblock %}
-            </div>
-        </div>
-        <div class="col-sm-1 pt-4 bg-secondary ez-context-menu">
-            {% block right_sidebar %}{% endblock %}
-        </div>
+    <div class="ibexa-edit-content__container">
+        {% block form %}{% endblock %}
     </div>
 {% endblock %}
+
